@YELP_HELP_RULES@

HELP_ID = mate-dictionary
HELP_FILES = index.docbook legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fi fr it oc ru sv uk zh_CN

HELP_MEDIA =                                      \
	figures/mate-dictionary-add-source.png        \
	figures/mate-dictionary-applet.png            \
	figures/mate-dictionary-applet-window.png     \
	figures/mate-dictionary-application.png       \
	figures/mate-dictionary-find.png              \
	figures/mate-dictionary-lookup.png            \
	figures/mate-dictionary-preferences-print.png \
	figures/mate-dictionary-preferences-source.png
